--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,2 +1,5 @@
 mountpoints:
   /: https://drive.google.com/drive/u/0/folders/189YWnXNSFJH0ehuzsR0iGuabEHEcvT7j
+mountpoints:
+  /: https://drive.google.com/drive/folders/1-PMuZVyhyYoEVvolAIPHpI-HinMOl9kz
+
